--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,8 @@ jobs:
           -I $PWD
 
     - name: Build nix packages
+      env:
+        NIXPKGS_ALLOW_UNFREE: 1
       run: nix shell -f '<nixpkgs>' nix-build-uncached -c nix-build-uncached ci.nix -A cacheOutputs
 
     - name: Trigger NUR update
